<resources>
    <string name="app_name">Livo</string>
    <string name="noConnection">No Internet</string>
    <string name="turnOnInternet">Your device is not connected to internet.turn on your internet connection</string>
    <string name="mobileData">Mobile Data</string>
    <string name="wifi">Wifi</string>
    <string name="you_are_offline_please_check_your_internet_connection">You are offline. Please check your internet connection</string>
    <string name="enter_secure_code">Enter Secure Code</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="send_secure_code">Send Secure Code</string>
    <string name="search">Search</string>
    <string name="denmark">Denmark</string>
    <string name="sweden">Sweden</string>
    <string name="choose_language">Choose Language</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="apply">Apply</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="englishTitle">English</string>
    <string name="denish">Danish</string>
    <string name="home">Home</string>
    <string name="listing">Listing</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="chat">Chat</string>
    <string name="message">Message</string>
    <string name="phone">Phone</string>
    <string name="offers">offers</string>
    <string name="youve_recieved">You\'ve recieved</string>
    <string name="data_modified">Data Modified</string>
    <string name="alphabetically">Alphabetically</string>
    <string name="published">Published</string>
    <string name="ongoing">Ongoing</string>
    <string name="completed">Completed</string>
    <string name="suspended">Suspended</string>
    <string name="expired">Expired</string>
    <string name="sender">Sender</string>
    <string name="transpoter">Transporter</string>
    <string name="show_only_my_offers">Show only my offers</string>
    <string name="reset_all">Reset all</string>
    <string name="SORT_BY">SORT BY</string>
    <string name="FILTER">FILTER</string>
    <string name="nearest_pickup">Nearest Pickup</string>
    <string name="highest_price">Highest Price</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="FILTERS">FILTERS</string>
    <string name="Offer_Sent_Successfully">Offer Sent \n Successfully</string>
    <string name="remove">Remove</string>
    <string name="send_offer">Send Offer</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="are_you_sure_you_want_to_delete_this_listing">Are you sure you want to delete this listing?</string>
    <string name="cancel">Cancel</string>
    <string name="update_offer">Update Offer</string>
    <string name="delete_now">Delete Now</string>
    <string name="a_notification_will_also_be_sent_out_to_sender_to_inform_listing_price_has_been_updated">A notification will also be sent out to sender to inform listing price has been updated</string>
    <string name="farudulent_item">Farudulent Item</string>
    <string name="spam">Spam</string>
    <string name="against_policy">Against Policy</string>
    <string name="suspicious_user">Suspicious User</string>
    <string name="item_doesnt_match_description">Item doesn\'t match description</string>
    <string name="help_community_keep_safe_for_everyone">Help community keep \nsafe for everyone</string>
    <string name="Select_one_or_more_reason_below_for_marking_this_listing_inappropriate">Select one or more reason below for marking this listing inappropriate</string>
    <string name="my_listing">My Listings</string>
    <string name="other_listings">Other Listings</string>
    <string name="show_all">Show all</string>
    <string name="notifications">Notifications</string>
    <string name="process">Process</string>
    <string name="submit_request">Submit Request</string>
    <string name="stripe_setup">Stripe Setup</string>
    <string name="shareapp">share App </string>
    <string name="applang">Change Language / skift sprog / Ändra språk </string>
    <string name="listing_successfully_deleted">Listing Successfully Deleted</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="total_amount">Total Amount</string>
    <string name="adjust_price">Adjust Price</string>
    <string name="discard_image">Discard Image?</string>
    <string name="are_you_sure_you_want_to_discard_this_item">Are you sure you want to discard this image?</string>
    <string name="okay">Ok</string>
    <string name="note">Note : </string>
    <string name="recommended_amount_is_calculated_based_on_your_listing_size_not_travel_distance">Recommended amount is calculated based on your listing size not travel distance</string>
    <string name="listing_amount">Listing Amount</string>
    <string name="livo_fee">Livo Fee</string>
    <string name="total_amount_payable">Total Amount Payable</string>
    <string name="kindly_wait_while_we_create_listing">Kindly wait while we create listing . . .</string>
    <string name="upload_address_proof">Upload Address Proof</string>
    <string name="address_proof">Address Proof</string>
    <string name="identity_proof">Identity Proof</string>
    <string name="postal_code"></string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="approve_transporter">Approve</string>
    <string name="make_payment">Make Payment</string>
    <string name="waiting_Transporter_approval"> Waiting For Transporter Approval</string>
    <string name="not_interested">Not Interested</string>
    <string name="message_sender">Message Sender</string>
    <string name="pickup_message">Message Transporter</string>
    <string name="listing_completed_successfully">Listing Completed \n Successfully!</string>
    <string name="accept_sender">Accept</string>
    <string name="decline">Decline</string>
    <string name="delete_offer">Delete Offer</string>
    <string name="change_price">Change Price</string>
    <string name="waiting_sender_payment">Waiting For Sender To Make Payment</string>
    <string name="open_map">Open Map</string>
    <string name="message_transpoter">Message Transpoter</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_capital">PAYMENT METHOD</string>
    <string name="complete_transaction">Complete Transaction</string>
    <string name="take_picture">Take Picture</string>
    <string name="offer_price">Offer Price</string>
    <string name="take_pic">Take pic</string>
    <string name="take__a_picture_of_your_item">Take a picture of your item</string>
    <string name="upload">Upload</string>
    <string name="view_all">view all</string>
    <string name="listing_picked_up">Listing Picked Up</string>
    <string name="listing_delivered">Listing Delivered</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="enter_pickup_address">Enter pick-up address</string>
    <string name="enter_dropoff_address">Enter drop-off address</string>
    <string name="recommended_amount">Recommended Amount</string>
    <string name="shot_angle_1">Shot \nAngle 1</string>
    <string name="shot_angle_2">Shot \nAngle 2</string>
    <string name="shot_angle_3">Shot \nAngle 3</string>
    <string name="charaters">0/60 characters</string>
    <string name="count_characters">/60 characters</string>
    <string name="charaters120">0/120 characters</string>
    <string name="count_characters120">/120 characters</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transporter_application">Transporter Application</string>
    <string name="you_can_also_join_our_transporter_force_and_earn_with_livo_before_you_submit_your_application_make">Become a Livo Transporter. Share your space and earn some extra on the way, apply here.</string>
    <string name="share">Share</string>
    <string name="application_settings">Application Settings</string>
    <string name="faqs">FAQs</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="payment_amp_cashbacks"><![CDATA[Payments & Cashbacks]]></string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="first_name">First Name *</string>
    <string name="last_name">Last Name *</string>
    <string name="email">Email *</string>
    <string name="date_of_birth_dd_mm_yy">Date Of Birth : DD/MM/YYYY *</string>
    <string name="i_am">I am</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="user_type">User Type</string>
    <string name="business">Business</string>
    <string name="individual">Individual</string>
    <string name="phone_number">Phone Number *</string>
    <string name="driver_info">Driver Info</string>
    <string name="select_vehicle_type">Select Vehicle Type</string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="enter_license_plate_no">Enter license plate no.</string>
    <string name="driver_license_number">Driver License Number *</string>
    <string name="cpr_personal_id_number">CPR (Personal ID Number) *</string>
    <string name="enter_cpr_personal_id_number">Enter CPR (Personal ID Number)</string>
    <string name="bank_account_info">Bank Account Info</string>
    <string name="registration_number">Registration Number *</string>
    <string name="enter_registration_number">Enter Registration Number</string>
    <string name="bank_account_number">Bank Account Number *</string>
    <string name="logout">Logout</string>
    <string name="about_you">About you</string>
    <string name="tell_us_a_little_about_you">Tell us a little about you...</string>
    <string name="submit_application">Submit Application</string>
    <string name="cancellation">Cancellation</string>
    <string name="frequently_asked_questions">Frequently Asked Questions</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="your_referral_code">YOUR REFERRAL CODE</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="enter_referral_code">ENTER REFERRAL CODE</string>
    <string name="enter_here">Enter Here</string>
    <string name="about_referral_and_earn_program">ABOUT REFERRAL AND EARN PROGRAM</string>
    <string name="india">India</string>
    <string name="general_issues">General Issues</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refunds">Refunds</string>
    <string name="legal_faq">LEGAL FAQ</string>
    <string name="referral_code_applied">Referral code Applied</string>
    <string name="lbl_set_profile_photo">Upload Image</string>
    <string name="lbl_take_camera_picture">Camera</string>
    <string name="lbl_choose_from_gallery">Gallery</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="dialog_permission_title">Grant Permissions</string>
</resources>