<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:background="@drawable/white_round_shape"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/rlMainInternal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <RelativeLayout
                android:id="@+id/rlView"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@drawable/grey_round_shape_45_opacity" />

            <RelativeLayout
                android:id="@+id/rlFirstHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlView"
                android:paddingTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLegalFAQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/barlow_bold"
                    android:text="@string/SORT_BY"
                    android:textAlignment="viewStart"
                    android:textColor="@color/livo_black_20_opacity"
                    android:textSize="16dp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvShowAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/barlow_bold"
                    android:text="@string/reset_all"
                    android:textAlignment="viewStart"
                    android:textColor="@color/livo_black_20_opacity"
                    android:textSize="14dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlFirstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFirstHeader"
                android:layout_marginTop="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <LinearLayout
                        android:id="@+id/tvDataModified"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="10dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/barlow_bold"
                            android:text="@string/data_modified"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                        <ImageView
                            android:id="@+id/ivDataModified"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/tvAlphabetically"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="8dp"
                        android:paddingBottom="10dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/barlow_bold"
                            android:text="@string/alphabetically"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                        <ImageView
                            android:id="@+id/ivAlphabatically"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="3dp"
                            app:srcCompat="@drawable/ic_baseline_arrow_upward_24" />
                    </LinearLayout>

                </LinearLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rlFirstHeader1"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFirstRow"
                android:paddingTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFilter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/barlow_bold"
                    android:text="@string/FILTER"
                    android:textAlignment="viewStart"
                    android:textColor="@color/livo_black_20_opacity"
                    android:textSize="16dp" />

                <RelativeLayout
                    android:id="@+id/cvUsertypeSelection"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="1dp">

                            <TextView
                                android:id="@+id/tvSender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/barlow_bold"
                                android:padding="3dp"
                                android:text="@string/sender"
                                android:textSize="14dp" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="1dp"
                            android:layout_marginEnd="5dp"
                            android:layout_marginBottom="1dp">

                            <TextView
                                android:id="@+id/tvTranspoter"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/barlow_bold"
                                android:padding="3dp"
                                android:text="@string/transpoter"
                                android:textSize="14dp" />
                        </RelativeLayout>
                    </LinearLayout>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFirstRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFirstHeader1"
                android:layout_marginTop="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvPublished"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/published"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvOngoing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/ongoing"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvCompleted"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/completed"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFirstRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFirstRow1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSuspended"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/suspended"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />


                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvExpired"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/expired"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </LinearLayout>


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlFirstRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFirstRow1"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="25dp"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvShowonlyMyoffer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/grey_round_shape_45_opacity"
                        android:fontFamily="@font/barlow_bold"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp"
                        android:text="@string/show_only_my_offers"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="16dp" />
                </LinearLayout>

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</layout>